Should use C++-style cast in CSSParser.cpp https://bugs.webkit.org/show_bug.cgi?id=65807

Replaces C-style cast with C++style cast.

Reviewed by Shinichiro Hamaji.

No new tests because no behavior change.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseAnimationTimingFunction):
(WebCore::CSSParser::parseFont):
(WebCore::CSSParser::parseColorFromValue):
(WebCore::CSSParser::parseFontFeatureTag):


Canonical link: https://commits.webkit.org/81644@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92549 268f45cc-cd09-0410-ab3c-d52691b4dbfc